@@ -85,6 +85,11 @@ Release 2022g - 2022-11-29 08:58:31 -0800
     lines are in the file 'backward'.  (Inspired by a suggestion from
     Stephen Colebourne.)
 
+    On C23-compatible platforms tzcode no longer uses syntax like
+    'static [[noreturn]] void usage(void);'.  Instead, it uses
+    '[[noreturn]] static void usage(void);' as strict C23 requires.
+    (Problem reported by Houge Langley.)
+
 
 Release 2022f - 2022-10-28 18:04:57 -0700
 
